Added gulp task in build

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "vue-resource": "^0.9.0"
   },
   "scripts": {
-    "build": "babel lib -d compiled"
+    "build": "babel lib -d compiled && gulp semantic-build"
   },
   "licenses": "MIT",
   "main": "compiled/index.js",
